# scikit_medical_robot

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
config/: msg_map.yaml
examples/: ftsensor_calibration.ipynb  registeration.ipynb  rosbag_data_export.ipynb  tool_calibration.ipynb  trajectory_recorder.ipynb
examples/test_data/ftsensor_recorder/: ftsensor_recorder_20230215_185733_331761.pickle
examples/test_data/position_recorder/: 20230310_152108_953470_points_in_medical.pickle  20230310_152259_608782_points_in_robot.pickle
examples/test_data/tool_tip_calibration/: 20230109_170514_740159_tool_tip_calibration_endmill.pickle
examples/test_data/trajectory_recorder/: trajectory_recorder_20230103_134417_318093.pickle
include/utilities/: helper.h
jupyter/: tool_calibration.ipynb
scripts/scikitMedicalRobot/: __init__.py  utilities.py
scripts/scikitMedicalRobot/algo/: __init__.py
scripts/scikitMedicalRobot/calibration/: __init__.py  ros_sample_tools.py  sample_helper.py  tool.py  vision.py
scripts/scikitMedicalRobot/ros/: __init__.py  moveit_helper.py  ros_helper.py  tf2_helper.py
scripts/templates/: quick_ros_template.py  ros_pykdl.ipynb
srv/: DataSampleCommand.srv
