<?xml version="1.0"?>
<package format="2">
  <name>scikit_medical_robot</name>
  <version>0.0.1</version>
  <description>The scikit_medical_robot package</description>

  <maintainer email="jsbyysheng@gmail.com">jsbyysheng</maintainer>
  <license>Apache License 2.0</license>
  
  <!-- <url type="website">http://wiki.ros.org/scikit_medical_robot</url> -->
  <!-- <author email="jsbyysheng@gmail.com">jsbyysheng</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
